tests/circuits/valids/value_clock.nts
.chipsets:
clock cl (1)
output out

.links:
cl:1 out:1