tests/circuits/invalids/invalid_value_1.nts
.chipsets:
input   a(2)
input   b
4071    or
output  s
.links:
a:1     or:1
b:1     or:2
or:3    s:1